--- a/walt.css
+++ b/walt.css
@@ -1,45 +1,47 @@
 /*!
+ * Walt v0.2.0-dev
+ * Copyright © 2023, Suzen Fylke
+ * License: MIT
+ *
  * Extensively uses portions of Writ v1.0.4, which is licensed as follows:
  * Copyright © 2015, Curtis McEnroe <curtis@cmcenroe.me>
  * https://cmcenroe.me/writ/LICENSE (ISC)
  */
 
-:root {
-  /* fonts */
-  --font-family: Palatino, Georgia, Lucida Bright, Book Antiqua, serif;
-  --font-family-monospace: Consolas, Liberation Mono, Menlo, Courier, monospace;
+ :root {
+  --font-family: "Palatino", "Georgia", "Lucida Bright", "Book Antiqua", serif;
+  --font-family-monospace: "Consolas", "Liberation Mono", "Menlo", "Courier", monospace;
   --font-size: 16px;
   --font-size-small: 0.833rem;
   --font-weight-bold: 600;
   --font-weight-heading: 400;
   --line-height: 1.5rem;
-  /* colors */
-  --color-background: hsl(0, 0%, 100%);
-  --color-text: hsl(0, 0%, 13%);
-  --color-secondary-text: hsl(0, 0, 61%);
-  --color-link: hsl(240, 100%, 46%);
-  --color-link-visited: hsl(273, 100%, 37%);
-  --color-code-background: rgba(0, 0, 0, 0.05);
-  --color-code-text: hsl(0, 0%, 7%);
-  --color-highlight: hsla(54, 100%, 62%, 0.4);
-  --color-highlight-deep: hsla(54, 100%, 62%, 0.9);
-  --color-border: rgba(0, 0, 0, 0.1);
-  --color-table-border: hsl(0, 0%, 86%);
+  --color-background: hsl(0deg 0% 100%);
+  --color-text: hsl(0deg 0% 13%);
+  --color-secondary-text: hsl(0deg 0 61%);
+  --color-link: hsl(240deg 100% 46%);
+  --color-link-visited: hsl(273deg 100% 37%);
+  --color-code-background: rgb(0 0 0 / 5%);
+  --color-code-text: hsl(0deg 0% 7%);
+  --color-highlight: hsl(54deg 100% 62% / 40%);
+  --color-highlight-deep: hsl(54deg 100% 62% / 90%);
+  --color-border: rgb(0 0 0 / 10%);
+  --color-table-border: hsl(0deg 0% 86%);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-background: hsl(232, 23%, 18%);
-    --color-text: hsl(227, 68%, 88%);
-    --color-secondary-text: hsl(228, 39%, 80%);
-    --color-link: hsl(217, 92%, 76%);
-    --color-link-visited: hsl(232, 97%, 85%);
-    --color-code-background: hsl(230, 19%, 26%);
-    --color-code-text: hsl(227, 68%, 88%);
-    --color-highlight: hsla(355, 71%, 77%, 0.4);
-    --color-highlight-deep: hsla(355, 71%, 77%, 0.6);
-    --color-border: hsl(231, 16%, 34%);
-    --color-table-border: hsl(228, 39%, 80%);
+    --color-background: hsl(232deg 23% 18%);
+    --color-text: hsl(227deg 68% 88%);
+    --color-secondary-text: hsl(228deg 39% 80%);
+    --color-link: hsl(217deg 92% 76%);
+    --color-link-visited: hsl(232deg 97% 85%);
+    --color-code-background: hsl(230deg 19% 26%);
+    --color-code-text: hsl(227deg 68% 88%);
+    --color-highlight: hsl(355deg 71% 77% / 40%);
+    --color-highlight-deep: hsl(355deg 71% 77% / 60%);
+    --color-border: hsl(231deg 16% 34%);
+    --color-table-border: hsl(228deg 39% 80%);
   }
 
   img {
@@ -59,7 +61,8 @@
 
 /* Layout */
 
-html, body {
+body,
+html {
   height: 100%;
   color: var(--color-text);
   background-color: var(--color-background);
@@ -78,18 +81,27 @@ body {
   margin-right: 1em;
 }
 
-body > header {
+header {
   text-align: center;
   margin-top: 5em;
 }
 
-main, body > footer {
+footer,
+main {
   display: block;
   max-width: 78ch;
   margin: auto;
 }
 
-main figure, main aside {
+footer {
+  margin-top: 3em;
+  padding-bottom: 3em;
+  position: sticky;
+  top: 100vh;
+}
+
+main aside,
+main figure {
   float: right;
   margin: 1.5rem 0 0 1ch;
 }
@@ -101,53 +113,42 @@ main aside {
   padding: 0 0 0 0.5ch;
 }
 
-body > footer {
-  position: sticky;
-  top: 100vh;
-}
-
-footer {
-  margin-top: 3em;
-  padding-bottom: 3em;
-}
-
-nav ul {
-  padding: 0;
-  list-style-type: none;
-}
-nav ul li {
-  display: inline;
-  padding-left: 1ch;
-  white-space: nowrap;
-}
-
-nav ul li:first-child {
-  padding-left: 0;
-}
-
 /* Spacing */
 
-p, ul, ol, dl, table, blockquote, pre, h1, h2, h3, h4, h5, h6 {
-  margin: 1.5rem 0 0 0;
+blockquote,
+dl,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ol,
+p,
+pre,
+table,
+ul {
+  margin: 1.5rem 0 0;
 }
 
-ul ul, ol ol, ul ol, ol ul {
-  margin: 0;
-}
+/* Headings */
 
-/* Typography */
-
-h1, h2, h3, h4, h5, h6, th, .site-name {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+th,
+.site-name {
   font-weight: var(--font-weight-heading);
 }
 
-h1, h2, h3, .site-name {
+h1, 
+h2,
+h3,
+.site-name {
   line-height: 3rem;
-}
-
-header + main h1 {
-  margin-top: 1.5rem;
-  font-size: 2.284em;
 }
 
 h1, .site-name {
@@ -179,24 +180,15 @@ small {
   font-size: 0.833em;
 }
 
-/* Links */
-a { text-decoration: none; }
-
-a, header nav a:visited, a code {
-  color: var(--color-link);
-}
-
-p a:hover {
-  text-decoration: underline;
-}
-
-a:visited, a:visited code {
-  color: var(--color-link-visited);
+header + main h1 {
+  margin-top: 1.5rem;
+  font-size: 2.284em;
 }
 
 /* Copy inline */
 
-sup, sub {
+sup,
+sub {
   font-size: 0.75em;
   line-height: 1em;
 }
@@ -226,28 +218,28 @@ blockquote {
 
 /* Pre-formatted text */
 
-code, pre, samp, kbd {
+code,
+kbd,
+pre,
+samp {
   color: var(--color-code-text); 
   font-family: var(--font-family-monospace);
   font-size: var(--font-size-small);
 }
 
-code, pre, samp {
+code,
+pre,
+samp {
   background-color: var(--color-code-background);
   border: solid var(--color-border);
   border-width: 1px;
   border-radius: 2px;
 }
 
-code, samp {
+code,
+samp {
   padding: 0.1em 0.2em;
   white-space: nowrap;
-}
-
-pre code {
-  border: none;
-  background-color: transparent;
-  white-space: inherit;
 }
 
 pre {
@@ -257,11 +249,42 @@ pre {
   overflow-x: auto;
 }
 
-kbd { font-weight: var(--font-weight-bold); }
+kbd { 
+  font-weight: var(--font-weight-bold);
+}
+
+pre code {
+  border: none;
+  background-color: transparent;
+  white-space: inherit;
+}
+
+/* Links */
+
+a,
+a code {
+  color: var(--color-link);
+  text-decoration: none;
+}
+
+a:visited,
+a:visited code {
+  color: var(--color-link-visited);
+}
+
+p a:hover {
+  text-decoration: underline;
+}
+
+header nav a:visited {
+  color: var(--color-link);
+}
 
 /* Lists */
 
-ul, ol, dd {
+dd,
+ol,
+ul {
   padding: 0 0 0 3ch;
 }
 
@@ -269,28 +292,50 @@ dd {
   margin: 0;
 }
 
-ul > li {
-  list-style-type: disc;
-}
-
-li ul > li {
-  list-style-type: circle;
-}
-
-li li ul > li {
-  list-style-type: square;
+ol ol,
+ol ul
+ul ol,
+ul ul {
+  margin: 0;
 }
 
 ol > li {
   list-style-type: decimal;
 }
 
+ul > li {
+  list-style-type: disc;
+}
+
+nav ul {
+  padding: 0;
+  list-style-type: none;
+}
+
 li ol > li {
   list-style-type: lower-roman;
 }
 
+li ul > li {
+  list-style-type: circle;
+}
+
+nav ul li {
+  display: inline;
+  padding-left: 1ch;
+  white-space: nowrap;
+}
+
 li li ol > li {
   list-style-type: lower-alpha;
+}
+
+li li ul > li {
+  list-style-type: square;
+}
+
+nav ul li:first-child {
+  padding-left: 0;
 }
 
 /* Tables */
@@ -303,11 +348,13 @@ table {
   margin-bottom: -1px;
 }
 
-thead, tfoot {
+thead,
+tfoot {
   background-color: var(--color-code-background);
 }
 
-th, td {
+th,
+td {
   padding: 0 0.5ch;
   border: solid var(--color-table-border);
   border-width: 1px;
